# CppND-Capstone-OpenCV-FaceDetection

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FaceDetection  FaceDetection.cbp  HelloWorld  HelloWorld.cbp  Makefile  README.md  cmake_install.cmake
src/: Application.cpp  Application.h  CustomVideoCapture.cpp  CustomVideoCapture.h  FaceDetector.cpp  FaceDetector.h  face_detector.cpp  face_detector.h  main.cpp
